--- a/www/index.html
+++ b/www/index.html
@@ -207,8 +207,12 @@
             etime = parseInt((new Date() - startTime)/1000);
             rest = period - etime;
             $("#time").html("経過時間: " + etime);
-            $("# remain").html("残り時間: " + rest);
+            $("#remain").html("残り時間: " + rest);
             analog(rest);
+            if(rest <= 0){
+                active = false;
+                alarm();
+            }
         }
     } 
 
