A,Bボタンクリックの可否を追加

--- a/www/index.html
+++ b/www/index.html
@@ -184,11 +184,14 @@
     function btnAClick(e){
         active = true;
         startTime = new Date();
+        $("#btnA").prop("disabled", true);
+        $("#btnB").prop("disabled", false);
     }
 
     // ButtonBがクリックされた時の処理
     function btnBClick(e){
         active = false;
+        $("#btnA").prop("disabled", false);
     }
 
     // ButtonCがクリックされた時の処理
@@ -212,6 +215,8 @@
             if(rest <= 0){
                 active = false;
                 alarm();
+                $("#btnA").prop("disabled", false);
+                $("#btnB").prop("disabled", true);
             }
         }
     } 
