--- a/www/index.html
+++ b/www/index.html
@@ -234,8 +234,8 @@
 
     <div id="remain">Remaining time</div>
     <div id="time">Time</div>
-    <button id="btnA">Start</button>  
-    <button id="btnB">Stop</button>  
+    <button id="btnA">player 1</button>  
+    <button id="btnB">player 2</button>  
     <button id="btnC">Set</button>  
     <input type="number" id="minute" value=0 >
     <input type="number" id="second" value=15 >
