--- a/www/index.html
+++ b/www/index.html
@@ -202,6 +202,8 @@
         period = 60*parseInt($("#minute").val()) + parseInt($("#second").val());
         $("#time").html("経過時間：０");
         $("#remain").html("残り時間： " + period);
+        $("#btnA").prop("disabled", false);
+        $("#btnB").prop("disabled", false);
     }
     
  
